--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">a
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jalee's Portfolio</title>
 
@@ -153,7 +153,7 @@
         </div>
 
         <div class="box">
-            <img src="linux.jpeg" alt="">
+            <img src="Linux.jpeg" alt="">
             <div class="content">
                 <h3>Linux</h3>
             </div>
@@ -216,7 +216,7 @@
         </div>
 
         <div class="box">
-            <img src="Nessus.png" alt="">
+            <img src="nessus.png" alt="">
             <div class="content">
                 <h3>Nessus</h3>
             </div>
