--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
             <h3> <span> Fathers Name : </span> Shaik Mastan Vali </h3>
             <h3> <span> Qualification : </span>Graduate / B-tech </h3>
             <h3> <span> Languages known : </span> English , Hindi , Telugu </h3>
-            <h3> <span> Address : </span> Samabasiva Rao Colony, Jonnalagadda.</h3><br><br><br>
+            <h3> <span> Address : </span> Samabasiva Rao Colony, Jonnalagadda, Andhra Pradesh.</h3><br><br><br>
             
         </div>
 
