--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
 
     <div class="share">
         <a href="https://www.linkedin.com/in/jaleel-basha-shaik-6a8056210/" class="fab fa-linkedin"></a>
+        <a href="https://github.com/Jaleeljb" class="fab fa-github"></a>
         
     </div>
 
