--- a/index.html
+++ b/index.html
@@ -242,10 +242,10 @@
             <h2>Key Responsibilities and Achievements</h2>
             <ul>
                 <li>Assisted in monitoring and analyzing network traffic for potential security threats.</li>
-                <li>Contributed to the development and implementation of security policies and procedures.</li>
+                <li>Contributed to developing and implementing security policies and procedures.</li>
                 <li>Conducted vulnerability assessments and actively participated in remediation efforts.</li>
                 <li>Collaborated effectively with the team members to review and update security policies.</li>
-                <li>Played a role in the maintenance of security tools and systems.</li>
+                <li>Played a role in maintaining security tools and systems.</li>
             </ul>
         </div>
     </div>
@@ -273,19 +273,17 @@
         </div>
 
 </section>
+        
+<footer class="footer">
+        <div class="container">
+            <div class="footer-content">
+                <p>&copy; 2024 Jaleel Basha @ All Rights Reserved</p>
+            </div>
+        </div>
+    </footer>
 
-
-
-
-
-
-
-
-
-
-
-
-
+    <!-- Font Awesome script -->
+    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 
 <!-- custom js file link  -->
 <script src="js/script.js"></script>
