--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
     <div class="share">
         <a href="https://www.linkedin.com/in/jaleel-basha-shaik-6a8056210/" class="fab fa-linkedin"></a>
         <a href="https://github.com/Jaleeljb" class="fab fa-github"></a>
+        <a href="https://t.me/+toNkSkuxo10yMjU1" class="fab fa-telegram"></a>
         
     </div>
 
