--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
     <div class="content">
         <h3>Shaik Jaleel Basha</h3>
-        <p>Driven Cyber Security Analyst | Fresher Ready to Safeguard Digital Frontiers</p>
+        <p>Passionate Cybersecurity Enthusiast with a Flair for Frontend Development</p>
     </div>
 
     <div class="share">
