--- a/index.html
+++ b/index.html
@@ -186,6 +186,20 @@
         </div>
 
         <div class="box">
+            <img src="html.jpg" alt="">
+            <div class="content">
+                <h3>HTML, CSS & JavaScript</h3>
+            </div>
+        </div>
+
+        <div class="box">
+            <img src="figma.jpg" alt="">
+            <div class="content">
+                <h3>Figma</h3>
+            </div>
+        </div>
+
+        <div class="box">
             <img src="github.png" alt="">
             <div class="content">
                 <h3>Github</h3>
@@ -196,6 +210,20 @@
             <img src="OWASP-TOP-10.png" alt="">
             <div class="content">
                 <h3>Owasp top 10</h3>
+            </div>
+        </div>
+
+        <div class="box">
+            <img src="Assessment.png" alt="">
+            <div class="content">
+                <h3>Vulnerability Assessment</h3>
+            </div>
+        </div>
+
+        <div class="box">
+            <img src="risk-management.png" alt="">
+            <div class="content">
+                <h3>Risk Management</h3>
             </div>
         </div>
 
