--- a/index.html
+++ b/index.html
@@ -178,6 +178,13 @@
             </div>
         </div>
 
+         <div class="box">
+            <img src="Owasp-Zap.png" alt="">
+            <div class="content">
+                <h3>Owasp Zap</h3>
+            </div>
+        </div>
+
         <div class="box">
             <img src="vscode.jpeg" alt="">
             <div class="content">
