--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <a href="#academics">academics</a>
         <a href="#certifications">certifications</a>
         <a href="#skills">skills</a>
-        <a href="#internship">internship</a>
+        <a href="#Work-Experience">Work-Experience</a>
         <a href="#about">about</a>
     </nav>
 
@@ -46,13 +46,13 @@
 
     <div class="content">
         <h3>Shaik Jaleel Basha</h3>
-        <p>Cyber Security Analyst | Ready to Protect Digital Assets | Frontend Development Enthusiast</p>
+        <p>Passionate Cybersecurity Enthusiast with a Flair for Frontend Development</p>
     </div>
 
     <div class="share">
         <a href="https://www.linkedin.com/in/jaleel-basha-shaik-6a8056210/" class="fab fa-linkedin"></a>
         <a href="https://github.com/Jaleeljb" class="fab fa-github"></a>
-        <a href="https://t.me/+toNkSkuxo10yMjU1" class="fab fa-telegram"></a>
+        <a href="service.html" class="fab fa-weixin"></a>
         
     </div>
 
@@ -165,6 +165,13 @@
         </div>
 
         <div class="box">
+            <img src="Owasp-Zap.png" alt="">
+            <div class="content">
+                <h3>Owasp Zap</h3>
+            </div>
+        </div>
+
+        <div class="box">
             <img src="Wireshark.png" alt="">
             <div class="content">
                 <h3>Wireshark</h3>
@@ -175,13 +182,6 @@
             <img src="Burpsuite.png" alt="">
             <div class="content">
                 <h3>Burpsuite</h3>
-            </div>
-        </div>
-
-         <div class="box">
-            <img src="owasp-zap.png" alt="">
-            <div class="content">
-                <h3>Owasp Zap</h3>
             </div>
         </div>
 
@@ -264,9 +264,9 @@
 
 <!-- contact section starts -->
 
-<section class="internship" id="internship">
+<section class="Work-Experience" id="Work-Experience">
 
-    <h1 class="heading"> <span>internship</span></h1>
+    <h1 class="heading"> <span>Work-Experience</span></h1>
 
     <br>
     <div class="profile">
@@ -274,7 +274,7 @@
             <h3><span> Company :</span> Vectority Solutions </h3>
             <h3><span>Role :</span> CyberSecurity Analyst </h3>
             <h3><span> Duration :</span> June 2023 - September 2023 </h3>
-        <div class="internship-details">
+        <div class="Work-Experience-details">
             <h2>Key Responsibilities and Achievements</h2>
             <ul>
                 <li>Assisted in monitoring and analyzing network traffic for potential security threats.</li>
