--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
         </div>
 
         <div class="box">
-            <img src="owasp-Zap.png" alt="">
+            <img src="owasp-zap.png" alt="">
             <div class="content">
                 <h3>Owasp Zap</h3>
             </div>
