--- a/index.html
+++ b/index.html
@@ -50,10 +50,7 @@
     </div>
 
     <div class="share">
-        <a href="https://www.linkedin.com/in/jaleel-basha-shaik-6a8056210/" class="fab fa-linkedin"></a>
-        <a href="https://github.com/Jaleeljb" class="fab fa-github"></a>
-        <a href="service.html" class="fab fa-weixin"></a>
-        
+        <a href="https://www.linkedin.com/in/jaleel-basha-shaik-6a8056210/" class="fab fa-linkedin"></a   
     </div>
 
 </section>
