--- a/index.html
+++ b/index.html
@@ -46,11 +46,13 @@
 
     <div class="content">
         <h3>Shaik Jaleel Basha</h3>
-        <p>Passionate Cybersecurity Enthusiast with a Flair for Frontend Development</p>
+        <p>Passionate QA Tester</p>
     </div>
 
     <div class="share">
-        <a href="https://www.linkedin.com/in/jaleel-basha-shaik-6a8056210/" class="fab fa-linkedin"></a   
+        
+        <a href="https://www.linkedin.com/in/jaleel-basha-shaik-6a8056210/" class="fab fa-linkedin"></a>
+        
     </div>
 
 </section>
@@ -112,10 +114,6 @@
             <img src="Web Fundamentals.png" alt="">
         </div>
 
-        <div class="box">
-            <img src="Microsoft Presecurity.png" alt="">
-        </div>
-
     </div>
    
     </div>
@@ -133,52 +131,11 @@
 
     <div class="box-container">
 
-        <div class="box">
-            <img src="C programming.png" alt="">
-            <div class="content">
-                <h3>C Programming</h3>
-            </div>
-        </div>
 
         <div class="box">
             <img src="Java.jpg" alt="">
             <div class="content">
                 <h3>Java programming</h3>
-            </div>
-        </div>
-
-        <div class="box">
-            <img src="Linux.jpeg" alt="">
-            <div class="content">
-                <h3>Linux</h3>
-            </div>
-        </div>
-
-        <div class="box">
-            <img src="Nmap.png" alt="">
-            <div class="content">
-                <h3>Network Mapping</h3>
-            </div>
-        </div>
-
-        <div class="box">
-            <img src="owasp-zap.png" alt="">
-            <div class="content">
-                <h3>Owasp Zap</h3>
-            </div>
-        </div>
-
-        <div class="box">
-            <img src="Wireshark.png" alt="">
-            <div class="content">
-                <h3>Wireshark</h3>
-            </div>
-        </div>
-
-        <div class="box">
-            <img src="Burpsuite.png" alt="">
-            <div class="content">
-                <h3>Burpsuite</h3>
             </div>
         </div>
 
@@ -197,58 +154,9 @@
         </div>
 
         <div class="box">
-            <img src="figma.jpg" alt="">
-            <div class="content">
-                <h3>Figma</h3>
-            </div>
-        </div>
-
-        <div class="box">
             <img src="github.png" alt="">
             <div class="content">
                 <h3>Github</h3>
-            </div>
-        </div>
-
-        <div class="box">
-            <img src="OWASP-TOP-10.png" alt="">
-            <div class="content">
-                <h3>Owasp top 10</h3>
-            </div>
-        </div>
-
-        <div class="box">
-            <img src="Assessment.png" alt="">
-            <div class="content">
-                <h3>Vulnerability Assessment</h3>
-            </div>
-        </div>
-
-        <div class="box">
-            <img src="risk-management.png" alt="">
-            <div class="content">
-                <h3>Risk Management</h3>
-            </div>
-        </div>
-
-        <div class="box">
-            <img src="Metasploit.png" alt="">
-            <div class="content">
-                <h3>Metasploit Framework</h3>
-            </div>
-        </div>
-
-        <div class="box">
-            <img src="osint.png" alt="">
-            <div class="content">
-                <h3>Osint Framework</h3>
-            </div>
-        </div>
-
-        <div class="box">
-            <img src="nessus.png" alt="">
-            <div class="content">
-                <h3>Nessus</h3>
             </div>
         </div>
 
