--- a/index.html
+++ b/index.html
@@ -134,23 +134,37 @@
 
 
         <div class="box">
-            <img src="Java.jpg" alt="">
+            <img src="C.png" alt="">
             <div class="content">
-                <h3>Java programming</h3>
+                <h3>C programming</h3>
             </div>
         </div>
 
         <div class="box">
-            <img src="vscode.jpeg" alt="">
+            <img src="Java.png" alt="">
             <div class="content">
-                <h3>Vscode</h3>
+                <h3>Java</h3>
             </div>
         </div>
 
         <div class="box">
-            <img src="html.jpg" alt="">
+            <img src="Maven.jpg" alt="">
             <div class="content">
-                <h3>HTML, CSS & JavaScript</h3>
+                <h3>Maven</h3>
+            </div>
+        </div>
+
+        <div class="box">
+            <img src="selenium.jpg" alt="">
+            <div class="content">
+                <h3>Selenium</h3>
+            </div>
+        </div>
+
+        <div class="box">
+            <img src="vscode.png" alt="">
+            <div class="content">
+                <h3>VScode</h3>
             </div>
         </div>
 
@@ -158,6 +172,48 @@
             <img src="github.png" alt="">
             <div class="content">
                 <h3>Github</h3>
+            </div>
+        </div>
+
+        <div class="box">
+            <img src="Testing.png" alt="">
+            <div class="content">
+                <h3>TestNG</h3>
+            </div>
+        </div>
+
+        <div class="box">
+            <img src="AutoIt.png" alt="">
+            <div class="content">
+                <h3>AutoIt</h3>
+            </div>
+        </div>
+
+        <div class="box">
+            <img src="Eclipse .jpg" alt="">
+            <div class="content">
+                <h3>Eclipse</h3>
+            </div>
+        </div>
+
+        <div class="box">
+            <img src="teams.png" alt="">
+            <div class="content">
+                <h3>Microsoft Teams</h3>
+            </div>
+        </div>
+
+        <div class="box">
+            <img src="junit.png" alt="">
+            <div class="content">
+                <h3>JUnit</h3>
+            </div>
+        </div>
+
+        <div class="box">
+            <img src="html.jpg" alt="">
+            <div class="content">
+                <h3>Html,Css&JavaScript</h3>
             </div>
         </div>
 
