--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
     <div class="content">
         <h3>Shaik Jaleel Basha</h3>
-        <p>Passionate QA Tester</p>
+        <p>Software Tester / Manual & Automation</p>
     </div>
 
     <div class="share">
