--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
         </div>
 
         <div class="box">
-            <img src="vscode.png" alt="">
+            <img src="vscode.jpeg" alt="">
             <div class="content">
                 <h3>VScode</h3>
             </div>
