--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
         </div>
 
         <div class="box">
-            <img src="Java.png" alt="">
+            <img src="java.png" alt="">
             <div class="content">
                 <h3>Java</h3>
             </div>
