--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <div class="info">
                 <div class="academic-level">
                     <h3><span>Graduation:</span></h3>
-                    <p>B.Tech in Information Technology</p>
+                    <p>Bachelor's in Information Technology</p>
                     <p class="aggregate">Aggregate: 70%</p>
                     <p class="institution">Tirumala Engineering College</p>
                 </div>
