--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <header class="header">
 
     <div class="user">
-        <img src="pass-port.jpeg" alt="">
+        <img src="suite.png" alt="">
     </div>
 
     <nav class="navbar">
