--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <!-- Font Awesome for Icons (Optional) -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
-    <link rel="icon" href="pass-port.jpeg" type="image/x-icon">
+    <link rel="icon" href="suite.png" type="image/x-icon">
 
     <!-- custom css file link  -->
     <link rel="stylesheet" href="style.css">
