--- a/index.html
+++ b/index.html
@@ -233,17 +233,16 @@
     <br>
     <div class="profile">
         <div class="personal-info">
-            <h3><span> Company :</span> Vectority Solutions </h3>
-            <h3><span>Role :</span> CyberSecurity Analyst </h3>
-            <h3><span> Duration :</span> June 2023 - September 2023 </h3>
+            <h3><span> Company :</span> Nextrics Software Solutions Pvt Ltd </h3>
+            <h3><span>Role :</span> Associate Software Engineer </h3>
+            <h3><span> Duration :</span> May 2023 </h3>
         <div class="Work-Experience-details">
             <h2>Key Responsibilities and Achievements</h2>
             <ul>
-                <li>Assisted in monitoring and analyzing network traffic for potential security threats.</li>
-                <li>Contributed to developing and implementing security policies and procedures.</li>
-                <li>Conducted vulnerability assessments and actively participated in remediation efforts.</li>
-                <li>Collaborated effectively with the team members to review and update security policies.</li>
-                <li>Played a role in maintaining security tools and systems.</li>
+                <li>Identify and fix bugs in existing software, using automation tools.</li>
+                <li>Collaborate with cross-functional teams including QA, DevOps, and Product.</li>
+                <li>Writing, testing, and maintaining code under the guidance of senior developers.</li>
+                <li>Stay updated with programming languages, frameworks, and tools used in the project.</li>
             </ul>
         </div>
     </div>
