--- a/index.html
+++ b/index.html
@@ -262,6 +262,7 @@
             <h3> <span> Name : </span> Shaik Jaleel Basha </h3>
             <h3> <span> Gender : </span> Male </h3>
             <h3> <span> Dob : </span> 24-01-2001 </h3>
+            <h3> <span> Fathers Name : </span> Shaik Mastan Vali </h3>
             <h3> <span> Qualification : </span>Graduate / B-tech </h3>
             <h3> <span> Languages known : </span> English , Hindi , Telugu </h3>
             <h3> <span> Address : </span> Jonnalagadda, Andhra Pradesh.</h3><br><br><br>
