--- a/index.html
+++ b/index.html
@@ -253,20 +253,24 @@
 
 <section class="about" id="about">
 
-
     <h1 class="heading"> <span>about</span> me </h1><br>
 
-    <div class="row"><br><br><br>
+    <div class="row" style="display: flex; flex-wrap: wrap; align-items: center; justify-content: space-between;">
 
-        <div class="info">
+        <!-- Info Section -->
+        <div class="info" style="flex: 1 1 50%; padding-right: 20px;">
             <h3> <span> Name : </span> Shaik Jaleel Basha </h3>
             <h3> <span> Gender : </span> Male </h3>
             <h3> <span> Dob : </span> 24-01-2001 </h3>
-            <h3> <span> Fathers Name : </span> Shaik Mastan Vali </h3>
-            <h3> <span> Qualification : </span>Graduate / B-tech </h3>
-            <h3> <span> Languages known : </span> English , Hindi , Telugu </h3>
-            <h3> <span> Address : </span> Jonnalagadda, Andhra Pradesh.</h3><br><br><br>
-            
+            <h3> <span> Father's Name : </span> Shaik Mastan Vali </h3>
+            <h3> <span> Qualification : </span> Graduate / B.Tech </h3>
+            <h3> <span> Languages Known : </span> English, Hindi, Telugu </h3>
+            <h3> <span> Address : </span> Jonnalagadda, Andhra Pradesh </h3>
+        </div>
+
+        <!-- Image Section -->
+        <div class="image" style="flex: 1 1 40%; text-align: center;">
+            <img src="white suite.jpeg" alt="Shaik Jaleel Basha" style="width: 100%; max-width: 400px; border-radius: 10px;">
         </div>
 
 </section>
