--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
 <footer class="footer">
         <div class="container">
             <div class="footer-content">
-                <p>&copy; Jalee 2025 All Rights Reserved</p>
+                <p>&copy; Jaleel 2025 All Rights Reserved</p>
             </div>
         </div>
     </footer>
